--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find a Verse</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/google/material-design-icons/master/png/social/public/baseline_book_black_48dp.png">
     <style>
         /* 1. Define variables for the light theme */
         :root {
@@ -275,6 +276,7 @@
             background-color: var(--verse-bg);
             color: var(--verse-text-color);
             border-left: 5px solid var(--verse-border);
+            /* New: Adds a soft shadow */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
             max-width: 700px;
