--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             background-color: var(--bg-color);
             color: var(--text-color);
             transition: background-color 0.3s, color 0.3s;
-            /* Custom Cursor */
-            cursor: url('https://cur.cursors-4u.com/cursors/cur-2/cur118.cur'), auto;
+            /* **FIXED CURSOR HERE:** Using an embedded SVG for reliability */
+            cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="%23f58a43" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-circle"><circle cx="12" cy="12" r="10"></circle></svg>'), auto;
         }
         .hero-section {
             background: linear-gradient(to right, var(--hero-bg-start), var(--hero-bg-end));
