--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <!-- The Verse of the Day Section -->
         <section class="border-t border-gray-300 pt-6 space-y-4">
-            <h2 class="text-xl font-bold text-gray-800">Verse of the Day</h2>
+            <h2 class="text-xl font-bold text-gray-800">Verse of the Hour</h2>
             <div id="verse-of-day" class="p-6 bg-blue-500 text-white rounded-2xl shadow-md space-y-2 text-center transition-transform duration-300">
                 <div id="votd-text" class="text-lg font-medium italic"></div>
                 <div id="votd-reference" class="text-sm font-semibold"></div>
@@ -175,8 +175,7 @@
             healing: { text: "Heal me, O Lord, and I shall be healed; save me, and I shall be saved, for you are my praise.", reference: "Jeremiah 17:14" },
             patience: { text: "Be joyful in hope, patient in affliction, faithful in prayer.", reference: "Romans 12:12" },
             forgiveness: { text: "Bear with each other and forgive one another if any of you has a grievance against someone. Forgive as the Lord forgave you.", reference: "Colossians 3:13" },
-            guidance: { text: "Trust in the Lord with all your heart and lean not on your own understanding; in all your ways submit to him, and he will make your paths straight.", reference: "Proverbs 3:5-6" },
-            votd: { text: "For where two or three are gathered in my name, there am I among them.", reference: "Matthew 18:20" }
+            guidance: { text: "Trust in the Lord with all your heart and lean not on your own understanding; in all your ways submit to him, and he will make your paths straight.", reference: "Proverbs 3:5-6" }
         };
 
         // Theme management
@@ -195,8 +194,14 @@
             verseResultContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
         };
 
+        // Display a verse that changes every hour
         const displayVerseOfTheDay = () => {
-             const verse = verses.votd;
+             const keys = Object.keys(verses);
+             const hour = new Date().getHours();
+             // Use the hour to get a predictable index that changes every hour
+             const index = hour % keys.length;
+             const selectedKey = keys[index];
+             const verse = verses[selectedKey];
              verseOfDayText.textContent = `“${verse.text}”`;
              verseOfDayReference.textContent = `— ${verse.reference}`;
         };
